--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,17 +1,15 @@
 #contact {
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 30px;
   align-items: center;
   height: inherit;
-  padding-left: 3rem;
-  padding-right: 3rem;
   @include device("tablet") {
     padding-left: 1.3rem;
     padding-right: 1.3rem;
   }
   @include device("mobile") {
-    margin-top: 60px;
+    margin-top: 40px;
     gap: 20px;
     flex-direction: column-reverse;
   }
@@ -20,7 +18,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 35px;
+    gap: 25px;
     overflow-y: auto;
     overflow-x: hidden;
     touch-action: pan-y;
@@ -44,7 +42,7 @@
     }
     @include device("tablet") {
       margin-top: 60px;
-      padding-bottom: 190px;
+      padding-bottom: 10px;
       &::-webkit-scrollbar {
         width: 0vw;
       }
@@ -59,7 +57,9 @@
       }
     }
     @include device("mobile") {
-      margin-top: 20px;
+      margin-top: 0px;
+      padding-bottom: 180px;
+
     }
   }
   #contact-note {
